    initial logins are quick, LP: #587858

  [ Steve Langasek ]
  * Don't check /etc/environment for locale settings; this is an obsolete
    usage we transitioned away from years ago.
  * Add LC_ALL to the list of exported locale variables.

  [ Colin Watson ]
  * Flush standard output and error before daemonising, so that we don't get
    three copies of our early debug output.

 -- Steve Langasek <steve.langasek@ubuntu.com>  Wed, 25 Aug 2010 23:04:22 -0700

mountall (2.17) maverick; urgency=low

  * SECURITY UPDATE: do not leave writable udev rules file around.
    - src/mountall.c: set umask correctly (LP: #591807).
    - debian/preinst: remove boot-time udev rules file.
    - CVE-2010-2961

 -- Kees Cook <kees@ubuntu.com>  Wed, 01 Sep 2010 15:20:14 -0700

mountall (2.16) maverick; urgency=low

  * conf/mountall.conf: set $LANG so that messages appearing in plymouth are
    translated (LP: #569365); this is a temporary workaround until upstart is
    fixed to pass the appropriate env vars to all init scripts

 -- Adrien Cunin <adri2000@ubuntu.com>  Tue, 24 Aug 2010 20:47:33 +0200

mountall (2.15) lucid-proposed; urgency=low

  [ Scott James Remnant ]
  * Fix an obvious thinko error that meant that the "I"gnore fsck error key
    for a "hard" failure was ignored.
  * When cancelling filesystem checks, only cancel those that are actually
    checking filesystems; otherwise those that are merely verifying the
    superblock will return an "unrecoverable error" rather than "cancelled".
    LP: #577331.

  [ Steve Langasek ]
  * Only send plymouth a progress update when there's actual progress to
    report; otherwise we flood plymouthd with redundant events, and the
    progress will spin for minutes after the fsck itself is finished.  Thanks
    to Tero Mononen and Anders Kaseorg for the patch.  LP: #571707.

 -- Steve Langasek <steve.langasek@ubuntu.com>  Sun, 09 May 2010 01:04:24 +0200

mountall (2.14) lucid; urgency=low

  [ Scott James Remnant ]